# ORACLE_AIDP_STREAMING

./: .gitignore  PROJECT_README.md  README.md  requirements.txt  streamlit_app.py
config/: meter_reading_event.schema.json  runtime.env.example  runtime.yaml  runtime.yaml.example
easy-events/: LICENSE  README.md  pyproject.toml
easy-events/src/easy_events/: __init__.py  core.py
easy-events/tests/: test_core.py
notebooks/: 00_load_runtime_yaml.ipynb  01_producer.ipynb  01_producer.py  02_consumer_bronze.ipynb  02_consumer_bronze.py  03_silver_gold.ipynb  03_silver_gold.py  04_ml_train.ipynb  04_ml_train.py  05_ml_score.ipynb  05_ml_score.py  06_streamlit_dashboard.ipynb  09_inline_html_mime_dashboard.ipynb  10_multi_layer_animated_reports.ipynb  11_refresh_dashboard_metrics.ipynb  12_fast_animated_dashboard.ipynb  13_all_layer_kpi_ui.ipynb
orclstream/: LICENSE  README.md  pyproject.toml
orclstream/src/orclstream/: __init__.py  client.py  codec.py  exceptions.py
orclstream/tests/: test_client.py
outputs/: smart_meter_streaming_demo.pptx  smart_meter_streaming_demo.pptx.inspect.ndjson
sql/: 00_reset_pipeline.sql  01_create_tables.sql
src/: __init__.py  event_generator.py  lakehouse.py  oci_streaming.py  schemas.py  settings.py
tests/: test_event_generator.py
work/deck/: build_smart_meter_demo.mjs
